Archive2/5a/528a88df0bc5c0/output
main.cpp:11:31: error: no viable conversion from 'optional<D>' to 'const optional<B>'
    boost::optional<B> const& ob = od;
                              ^    ~~
/usr/local/include/boost/optional/optional.hpp:780:5: note: candidate constructor not viable: no known conversion from 'boost::optional<D>' to 'boost::none_t' for 1st argument
    optional( none_t none_ ) BOOST_NOEXCEPT : base(none_) {}
    ^
/usr/local/include/boost/optional/optional.hpp:784:5: note: candidate constructor not viable: no known conversion from 'boost::optional<D>' to 'argument_type' (aka 'const B &') for 1st argument
    optional ( argument_type val ) : base(val) {}
    ^
/usr/local/include/boost/optional/optional.hpp:789:5: note: candidate constructor not viable: no known conversion from 'boost::optional<D>' to 'rval_reference_type' (aka 'B &&') for 1st argument
    optional ( rval_reference_type val ) : base( boost::forward<T>(val) ) 
    ^
/usr/local/include/boost/optional/optional.hpp:855:5: note: candidate constructor not viable: no known conversion from 'boost::optional<D>' to 'const boost::optional<B> &' for 1st argument
    optional ( optional const& rhs ) : base( static_cast<base const&>(rhs) ) {}
    ^
/usr/local/include/boost/optional/optional.hpp:860:2: note: candidate constructor not viable: no known conversion from 'boost::optional<D>' to 'boost::optional<B> &&' for 1st argument
        optional ( optional && rhs ) 
        ^
1 error generated.
